[package]
name = "rustyvibes-evdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bright-color = ["bpaf/bright-color"]
dull-color = ["bpaf/dull-color"]

[dependencies]
bpaf = "0.8.1"
evdev = "0.12.1"
flume = "0.10.14"
libc = "0.2.146"
mio = { version = "0.8.8", default-features = false, features = ["os-ext", "os-poll"] }
once_cell = "1.18.0"
rodio_wav_fix = "0.15.0"
serde = "1"
serde_json = "1"